--- a/style.css
+++ b/style.css
@@ -1,14 +1,17 @@
 body{
     font-family: 'PT Sans', sans-serif;
-    color: grey;
+    color: rgb(70, 67, 67);
     margin: 0;
 }
+h1{
+    font-size: 35px;
+}
 .span{
-    color: orange;
+    color: rgb(255, 123, 0);
 }
 .link-button{
     text-decoration: none;
-    background-color: rgb(255, 123, 0);
+    background-color: rgba(255, 94, 0, 0.993);
     color: white;
     font-weight: 400;
     padding: 10px 20px;
@@ -16,21 +19,25 @@ body{
 }
 .flexible-container{
     display: flex;
-    margin-bottom: 100px;
+    margin-bottom: 1%;
 
 }
 .half-width{
     width: 50%;
-    padding-left: 5%;
+    padding-left: 17%;
+    padding-bottom: 10%;
 }
 .half-width img{
-    width: 90%;
+    width: 123.1%;
+    padding-top: 20%;
 }
 .middle-side{
     background-image: url(images/shapes/7.png);
     background-repeat: no-repeat;
     background-position: left;
-    background-size: 80%;
+    background-size: 100%;
+    background-position-x: 100%;
+    background-position-y: 10%;
 }
 p{
     margin-bottom: 50px;
@@ -40,9 +47,27 @@ p{
 }
 .Recipie{
     width: 40%;    
-    border-radius: 6%;
-    margin-left: 5%;
+    border-radius: 4%;
+    margin-left: 2%;
     margin-right: 5%;
-    padding-left: 40px;
+    padding: 1%;
     box-shadow: 10px 10px 30px;
+    margin-bottom: 4%;
+    height: 70%;
+    float: left;
+}
+.Recipie img{
+    width: 100%;
+}
+footer{
+    text-align: center;
+    background-color: rgb(1, 1, 15);
+    background-size: 50px 100px;
+}
+.bottom-side{
+    margin-left: 1%;
+    margin-right: 1%;
+}
+h3{
+    color: black;
 }
